# optional

./: CMakeLists.txt  README.md  imgui.ini  optional.ini  run.ps1  run.sh  vcpkg.json
src/: main.cpp  panels.cpp  panels.hpp  window.cpp  window.hpp
src/options/: option_math.cpp  option_math.hpp  options_calculator.cpp  options_calculator.hpp  payoff_plot.cpp  payoff_plot.hpp  sidebar.cpp  sidebar.hpp  strategy_eval.cpp  strategy_eval.hpp  strategy_registry.cpp  strategy_registry.hpp  strategy_types.cpp  strategy_types.hpp  strategy_ui.cpp  strategy_ui.hpp  utils.cpp  utils.hpp
